--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/storage/app/public/uploads/avatars/default-avatar.png": "/storage/app/public/uploads/avatars/default-avatar.png"
 }
